--- a/mod00-01/css/style.css
+++ b/mod00-01/css/style.css
@@ -20,11 +20,10 @@ h2,
 p {
 	color: white;
     font-weight: normal;
-
 }
 
 h1 {
-	font-family: 'Oswald', sans-serif
+	font-family: 'Oswald', sans-serif;
 	font-size: 50px;
 	margin-bottom: 0;
 	font-weight: bold;
