--- a/mod00-01/css/style.css
+++ b/mod00-01/css/style.css
@@ -53,4 +53,8 @@ h2 {
 	left: 50%;
 	transform:	translate(-50%, -50%);
 	position: absolute;
+	background-color: rgba( 0,0,0,0.6);
+	border-radius: 30px;
+	padding: 20px; 
+
 }
