--- a/mod00-01/css/style.css
+++ b/mod00-01/css/style.css
@@ -5,14 +5,15 @@ body {
 	background-attachment: fixed;
 	font-family: 'Titillium Web', sans-serif;
 	/*position: relative;*/
+
 }
 
 .profile {
 	border-radius: 50%;
 	width: 200px;
 	border: 3px solid white;
-	
-
+	margin: 0px auto 0px auto;
+	display: block;
 }
 
 h1,
@@ -36,7 +37,7 @@ h1 {
 
 hr {
     display: block;
-    height: 3px;
+    height: 1px;
     width: 10%;
     border: white;
     border-top: 1px solid #ccc;
@@ -59,16 +60,24 @@ h2 {
 *
 */
 
-.wrapper {
-	width: 100%;
-	margin: 0 auto;
+.wrapper-in {
+	margin: -90px 0px 0px 0px;
 	text-align: center;
-	position: absolute;
+	background-color: rgba(68,64,115, 0.3);
+	padding: 60px 20px 20px 20px; 
+	display: block;
+	z-index: -1;
+
+
+}
+
+.wrapper-out {
+	border: 2px solid white;
+	padding: 0px;
 	top: 50%;
 	left: 50%;
 	transform:	translate(-50%, -50%);
 	position: absolute;
-	background-color: rgba( 0,0,0,0.6);
-	padding: 40px 20px 20px 20px; 
+
 
 }
