--- a/mod02-05/css/style.css
+++ b/mod02-05/css/style.css
@@ -1,3 +1,9 @@
+/*
+*
+*
+*
+*/
+
 /*css reset*/
 * {
 	/*removes default pading and margin*/
@@ -32,3 +38,130 @@ footer {
 	text-align: center;
 	font-size: 14px;
 }
+
+form {
+	text-align: right;
+	padding: 10px 20px 20px;
+}
+
+main {
+	padding: 20px 10px 10px;
+}
+
+h3 {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 20px;
+}
+
+/*
+*
+* Posts
+*
+*/
+
+#postCircle,
+#imageCircle {
+	height: 70px;
+	width: 70px;
+	background-color: red;
+	border-radius: 50%;
+	color: white;
+	text-align: center;
+	line-height: 70px; 
+	float: left;
+}
+
+#postCircle {
+	background-color: #4acf50;
+}
+
+#imageCircle {
+	background-color: #09c;
+}
+
+.inline-blocked {
+	display: inline-block;
+	text-align: center;
+	font-size: 20px;
+	margin-left: 10px;
+}
+
+.dashColumns {
+	width: 32%;
+	height: 100px;
+	display: inline-block;
+}
+
+
+
+
+/*
+*
+* Buttons
+*
+*/
+
+.btn {
+	border: none;
+	padding: 15px 30px;
+	font-size: 14px;
+	border-radius: 5px;
+	color: white;
+}
+
+.btn-blue {
+	background-color: #09c;
+}
+
+.btn-green {
+	background-color: #4caf50;
+}
+
+/*
+*
+* Images
+*
+*/
+
+.img-set-holder {
+	text-align: center;
+}
+
+.img-set {
+	heigth: 100px;
+	width: 100px;
+	padding: 5px;
+	border-radius: 3px;
+	background-color: #fff;
+	margin: 0 5px;
+}
+
+/*
+*
+* Posts
+*
+*/
+
+#postTitle,
+#postContent {
+	width: 100%;
+	border-radius: 3px;
+	padding: 10px;
+}
+
+#postTitle {
+	margin-bottom: 20px;
+}
+
+#postContent {
+	height: 100px;
+	margin-bottom: 10px;
+}
+
+
+
+
+
+
+
